# python-build-tests

./: .gitignore  README.md  pyproject.toml
1_passthrough_build_backend/: README.md  pyproject.toml  setup.py
1_passthrough_build_backend/build-tools/build_helper/: __init__.py
build_helper/: setup.py
build_helper/build_helper/: __init__.py
namespace_package_example/setup_cfg/: README.md  setup.cfg
namespace_package_example/setup_cfg/namespace_pkg/plugin1/: file.py  resource.yaml
namespace_package_example/setup_cfg/tests/: test_foo.py
namespace_package_example/setup_py/: MANIFEST.in  README.md  setup.py
plugins/plugin1/: setup.py
plugins_use_case/: README.md  build_helper.py  setup.py
plugins_use_case/plugins/p1/: setup.py
plugins_use_case/plugins/p1/plugin_p1.egg-info/: PKG-INFO  SOURCES.txt
