[metadata]
name = namespace_pkg_test
version = attr: namespace_pkg.plugin1.__version__

[options]
packages = find_namespace:
include_package_data = true

[options.packages.find]
exclude =
    # this works to exclude tests from wheel
    tests
    # all of those are failing to exclude build from wheel
    build
    build/
    build/*
    build/**


[options.package_data]
namespace_pkg = *.yaml
